[package]
name = "antd-sys"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"
categories = ["wasm"]
keywords = ["wasm", "antd"]
description = "Wasm binding for Ant Design."
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/jetli/antd-rs.git"
homepage = "https://github.com/jetli/antd-rs"
documentation = "https://github.com/jetli/antd-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.57"

[dependencies.web-sys]
version = "0.3.34"
features = [
    "Element",
    "Window",
    "Document",
    "Event",
]