[package]
name = "antd-yew"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"
categories = ["wasm"]
keywords = ["wasm", "antd"]
description = "Ant Design components for the Yew framework."
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/jetli/antd-rs.git"
homepage = "https://github.com/jetli/antd-rs"
documentation = "https://github.com/jetli/antd-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
